--- a/airflow/.gitignore
+++ b/airflow/.gitignore
@@ -1,2 +1,21 @@
+.DS_Store
+.DS_Store?
+**/.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*.csv
+*.parquet
+*.json
+*.log
+*.tfstate
+*.tfstate.*
+**.terraform
+**.terraform.lock.*
+terraform*
 .env
-__pycache__/
+**__pycache__/
+**google_credentials.json
+**logs/
