--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -57,6 +57,7 @@ x-airflow-common:
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     - ./drivers:/opt/airflow/drivers
+    - ~/.google/credentials/:/.google/credentials:ro
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
