--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -34,5 +34,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   football_stats:
     # Applies to all files under models/example/
-    example:
+    staging:
       materialized: view
