Added field descriptions and test to schema yml file

--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -36,3 +36,9 @@ models:
     # Applies to all files under models/example/
     staging:
       materialized: view
+
+seeds: 
+  football_stats:
+      pl_teams_id:
+          +column_types:
+              team_id: string 
