--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -6,31 +6,8 @@ USER root
 RUN apt-get update -qq && apt-get install vim -qqq 
 
 # INSTALL DEPENDENCIES
-RUN apt-get install -y unzip curl xvfb libxi6 libgconf-2-4
+# RUN apt-get install -y unzip curl xvfb libxi6 libgconf-2-4
 
-RUN echo "deb http://security.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list                                                   
-RUN mkdir -p /usr/share/man/man1 && \
-    apt-get update -y && \
-    apt-get install -y openjdk-8-jre-headless
-
-RUN apt-get install unzip -y && \
-    apt-get autoremove -y
-
-RUN apt-get install -y wget
-
-# INSTALL CHROME
-RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add \
-    && echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
-    && apt-get -y update \
-    && apt-get -y install google-chrome-stable
-
-# INSTALL CHROMEDRIVER
-RUN wget -N https://chromedriver.storage.googleapis.com/107.0.5304.62/chromedriver_linux64.zip -P ~/ \
-    && unzip ~/chromedriver_linux64.zip -d ~/ \
-    && rm ~/chromedriver_linux64.zip \
-    && mv -f ~/chromedriver /usr/local/bin/chromedriver \
-    && chown root:root /usr/local/bin/chromedriver \
-    && chmod 0755 /usr/local/bin/chromedriver
 
 USER ${AIRFLOW_UID}
 COPY requirements.txt .
